--- a/Payload_Type/apollo/apollo/agent_code/Tasks/Tasks.csproj
+++ b/Payload_Type/apollo/apollo/agent_code/Tasks/Tasks.csproj
@@ -26,5 +26,7 @@
     <PackageReference Include="PolySharp" Version="1.14.1" />
     <PackageReference Include="System.DirectoryServices" Version="4.5.0" />
     <PackageReference Include="System.Management" Version="4.5.0" />
+    <PackageReference Include="AForge.Video" Version="2.2.5" />
+    <PackageReference Include="AForge.Video.DirectShow" Version="2.2.5" />
   </ItemGroup>
 </Project>
