--- a/Payload_Type/apollo/apollo/agent_code/Tasks/Tasks.csproj
+++ b/Payload_Type/apollo/apollo/agent_code/Tasks/Tasks.csproj
@@ -28,5 +28,6 @@
     <PackageReference Include="System.Management" Version="4.5.0" />
     <PackageReference Include="AForge.Video" Version="2.2.5" />
     <PackageReference Include="AForge.Video.DirectShow" Version="2.2.5" />
+    <PackageReference Include="AForge.Video.FFMPEG" Version="2.2.5" />
   </ItemGroup>
 </Project>
